# Plank

./: .gitignore  LICENSE  Makefile  README.md  engine.cpp  engine.h  game_state.h  machine.h  machine_state.cpp  machine_state.h  main.cpp  meson.build  oracle.h  player.cpp  player.h  transition.cpp  transition.h
automaton/: machine_state.cpp  transition.cpp
components/: cup.cpp  deck.cpp  die.cpp  numeric_die.cpp  playing_card.cpp
docs/: arch.md  automaton_ex.mmd  catan_automaton.mmd  client_interaction.mmd  modules.mmd
engine/: cli_io.cpp  engine.cpp  net_io.cpp  player.cpp  prompt.cpp
gtest/: build.ninja  compile_commands.json
gtest/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
gtest/meson-logs/: meson-log.txt
include/: engine.h  game_state.h  machine_state.h  numeric_die.h  player.h  standard_playing_card.h  transition.h
include/automaton/: machine_state.h  oracle.h  transition.h
include/components/: card.h  coin.h  cup.h  deck.h  die.h  numeric_die.h  playing_card.h  standard_playing_card.h
include/engine/: cli_io.h  engine.h  game_log.h  io.h  net_io.h  player.h  prompt.h
tests/components/: test_cards.cpp  test_die.cpp
